--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     "license": "MIT",
     "require": {
         "php": "8.1.*",
+        "guzzlehttp/psr7": "^2.2",
+        "psr/http-message": "^1.0",
         "react/event-loop": "^1.3",
         "react/socket": "^1.11"
     },
