--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "php": "8.1.*",
         "guzzlehttp/psr7": "^2.2",
         "psr/http-message": "^1.0",
+        "ratchet/rfc6455": "^0.3.1",
         "react/event-loop": "^1.3",
         "react/socket": "^1.11"
     },
