--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,17 @@
         "react/socket": "^1.11"
     },
     "require-dev": {
+        "ext-session": "*",
         "ext-sockets": "*",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "1.7.5",
         "phpstan/phpstan-phpunit": "1.1.1",
         "phpunit/phpunit": "^9.5",
+        "symfony/http-foundation": "^5.4 || ^6.0",
         "symfony/phpunit-bridge": "^5.4 || ^6.0"
+    },
+    "conflict": {
+        "symfony/http-foundation": "<5.4 || >=7.0"
     },
     "autoload": {
         "psr-4": {
