--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -16,8 +16,8 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-          tools: composer:v2,flex
-          extensions: curl, iconv, mbstring, mongodb, pdo, pdo_sqlite, sqlite, zip
+          tools: composer:v2
+          extensions: curl, iconv, mbstring, mongodb, pdo, pdo_sqlite, session, sockets, sqlite, zip
           coverage: none
 
       - name: Install dependencies
