--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "type": "library",
     "description": "PHP library to create a WebSocket server",
     "keywords": [
-        "websocket"
+        "WAMP",
+        "websocket",
+        "websocket server"
     ],
     "license": "MIT",
     "require": {
@@ -12,7 +14,9 @@
         "psr/http-message": "^1.0",
         "ratchet/rfc6455": "^0.3.1",
         "react/event-loop": "^1.3",
-        "react/socket": "^1.11"
+        "react/socket": "^1.11",
+        "symfony/http-foundation": "^5.4 || ^6.0",
+        "symfony/routing": "^5.4 || ^6.0"
     },
     "require-dev": {
         "ext-session": "*",
@@ -21,11 +25,11 @@
         "phpstan/phpstan": "1.7.12",
         "phpstan/phpstan-phpunit": "1.1.1",
         "phpunit/phpunit": "^9.5",
-        "symfony/http-foundation": "^5.4 || ^6.0",
+        "psr/container": "^1.0 || ^2.0",
         "symfony/phpunit-bridge": "^5.4 || ^6.0"
     },
     "conflict": {
-        "symfony/http-foundation": "<5.4 || >=7.0"
+        "psr/container": ">=3.0"
     },
     "autoload": {
         "psr-4": {
