--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "8.1.*",
-        "guzzlehttp/psr7": "^2.2",
+        "guzzlehttp/psr7": "^2.3",
         "psr/http-message": "^1.0",
         "ratchet/rfc6455": "^0.3.1",
         "react/event-loop": "^1.3",
@@ -24,7 +24,7 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "1.7.14",
         "phpstan/phpstan-phpunit": "1.1.1",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "9.5.21",
         "psr/container": "^1.0 || ^2.0",
         "symfony/phpunit-bridge": "^5.4 || ^6.0"
     },
