--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           php-version: '8.1'
           tools: composer:v2
-          extensions: curl, iconv, mbstring, mongodb, pdo, pdo_sqlite, session, sockets, sqlite, zip
+          extensions: curl, iconv, mbstring, session, sockets, sqlite, zip
           coverage: none
 
       - name: Install dependencies
