--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
         "phpstan/phpstan": "1.8.2",
         "phpstan/phpstan-phpunit": "1.1.1",
         "phpunit/phpunit": "9.5.21",
-        "psr/container": "^1.0 || ^2.0",
+        "psr/container": "^2.0",
         "psr/event-dispatcher": "^1.0",
         "symfony/phpunit-bridge": "^5.4 || ^6.0"
     },
     "conflict": {
-        "psr/container": ">=3.0",
+        "psr/container": "<2.0, >=3.0",
         "psr/event-dispatcher": ">=2.0"
     },
     "autoload": {
