--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "8.1.*",
+        "php": "8.1.* || 8.2.*",
         "guzzlehttp/psr7": "^2.4",
         "psr/http-message": "^1.0",
         "ratchet/rfc6455": "^0.3.1",
