--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ phpstan.neon export-ignore
 phpstan-baseline.neon export-ignore
 phpunit.xml.dist export-ignore
 README.md export-ignore
+rector.php export-ignore
