--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "phpunit/phpunit": "9.6.0",
         "psr/container": "^1.0 || ^2.0",
         "psr/event-dispatcher": "^1.0",
+        "rector/rector": "0.15.11",
         "symfony/phpunit-bridge": "^5.4 || ^6.0"
     },
     "conflict": {
