--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,12 @@
         "ext-session": "*",
         "ext-sockets": "*",
         "phpstan/extension-installer": "^1.2",
-        "phpstan/phpstan": "1.9.17",
-        "phpstan/phpstan-phpunit": "1.3.4",
-        "phpunit/phpunit": "10.0.7",
+        "phpstan/phpstan": "1.10.13",
+        "phpstan/phpstan-phpunit": "1.3.11",
+        "phpunit/phpunit": "10.1.0",
         "psr/container": "^1.0 || ^2.0",
         "psr/event-dispatcher": "^1.0",
-        "rector/rector": "0.15.13",
-        "symfony/phpunit-bridge": "^5.4 || ^6.0"
+        "rector/rector": "0.15.24"
     },
     "conflict": {
         "psr/container": ">=3.0",
