--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "8.1.* || 8.2.*",
         "guzzlehttp/psr7": "^2.4",
-        "psr/http-message": "^1.0",
+        "psr/http-message": "^1.0 || ^2.0",
         "ratchet/rfc6455": "^0.3.1",
         "react/event-loop": "^1.3",
         "react/socket": "^1.11",
