--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,11 +9,11 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: ['8.1', '8.2']
+        php: ['8.2']
         composer-flags: ['--prefer-stable']
         can-fail: [false]
         include:
-          - php: '8.1'
+          - php: '8.2'
             composer-flags: '--prefer-stable --prefer-lowest'
             can-fail: false
 
