--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "8.1.* || 8.2.*",
+        "php": "8.2.*",
         "guzzlehttp/psr7": "^2.4",
         "psr/http-message": "^1.0 || ^2.0",
         "ratchet/rfc6455": "^0.3.1",
@@ -22,12 +22,12 @@
         "ext-session": "*",
         "ext-sockets": "*",
         "phpstan/extension-installer": "^1.2",
-        "phpstan/phpstan": "1.10.33",
+        "phpstan/phpstan": "1.10.34",
         "phpstan/phpstan-phpunit": "1.3.14",
-        "phpunit/phpunit": "10.3.3",
+        "phpunit/phpunit": "10.3.4",
         "psr/container": "^1.0 || ^2.0",
         "psr/event-dispatcher": "^1.0",
-        "rector/rector": "0.18.2"
+        "rector/rector": "0.18.3"
     },
     "conflict": {
         "psr/container": ">=3.0",
