--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: ['8.2']
+        php: ['8.2', '8.3']
         composer-flags: ['--prefer-stable']
         can-fail: [false]
         include:
