--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "8.2.*",
+        "php": "8.2.* || 8.3.*",
         "guzzlehttp/psr7": "^2.4",
         "psr/http-message": "^1.0 || ^2.0",
         "ratchet/rfc6455": "^0.3.1",
