--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "ratchet/rfc6455": "^0.3.1",
         "react/event-loop": "^1.3",
         "react/socket": "^1.11",
-        "symfony/http-foundation": "^5.4 || ^6.3 || ^7.0",
-        "symfony/routing": "^5.4 || ^6.3 || ^7.0"
+        "symfony/http-foundation": "^6.3 || ^7.0",
+        "symfony/routing": "^6.3 || ^7.0"
     },
     "require-dev": {
         "ext-session": "*",
